[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/ui/menufont.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/cam_opts.gd" type="Script" id=3]

[sub_resource type="ImageTexture" id=1]

[sub_resource type="ImageTexture" id=2]
flags = 0
flags = 0

[node name="cam" type="VBoxContainer"]
margin_left = 124.0
margin_top = 27.0
margin_right = 444.0
margin_bottom = 440.0
rect_min_size = Vector2( 320, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 11
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sep_top" type="CenterContainer" parent="."]
margin_right = 320.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="cam_x" type="HBoxContainer" parent="."]
margin_top = 72.0
margin_right = 320.0
margin_bottom = 99.0
size_flags_horizontal = 3

[node name="NAME" type="Label" parent="cam_x"]
margin_right = 292.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 1 )
valign = 1

[node name="btn" type="CheckBox" parent="cam_x"]
margin_left = 296.0
margin_right = 320.0
margin_bottom = 27.0
custom_icons/checked = SubResource( 1 )
custom_icons/unchecked = SubResource( 2 )
flat = true

[node name="cam_y" type="HBoxContainer" parent="."]
margin_top = 110.0
margin_right = 320.0
margin_bottom = 137.0
size_flags_horizontal = 3

[node name="NAME" type="Label" parent="cam_y"]
margin_right = 292.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 1 )
valign = 1

[node name="btn" type="CheckBox" parent="cam_y"]
margin_left = 296.0
margin_right = 320.0
margin_bottom = 27.0
custom_icons/checked = SubResource( 1 )
custom_icons/unchecked = SubResource( 2 )
flat = true

[node name="cam_tree" type="Tree" parent="."]
visible = false
margin_top = 124.0
margin_right = 320.0
margin_bottom = 161.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="cam_spd" type="VBoxContainer" parent="."]
margin_top = 148.0
margin_right = 320.0
margin_bottom = 297.0

[node name="js_x" type="VBoxContainer" parent="cam_spd"]
margin_right = 320.0
margin_bottom = 47.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NAME" type="Label" parent="cam_spd/js_x"]
margin_right = 320.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 1 )
valign = 1

[node name="slide" type="HSlider" parent="cam_spd/js_x"]
margin_top = 31.0
margin_right = 320.0
margin_bottom = 47.0
size_flags_horizontal = 3
min_value = 0.1
max_value = 3.0
step = 0.02
value = 0.1

[node name="js_y" type="VBoxContainer" parent="cam_spd"]
margin_top = 51.0
margin_right = 320.0
margin_bottom = 98.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NAME" type="Label" parent="cam_spd/js_y"]
margin_right = 320.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 1 )
valign = 1

[node name="slide" type="HSlider" parent="cam_spd/js_y"]
margin_top = 31.0
margin_right = 320.0
margin_bottom = 47.0
size_flags_horizontal = 3
min_value = 0.1
max_value = 3.0
step = 0.02
value = 0.1

[node name="mouse" type="VBoxContainer" parent="cam_spd"]
margin_top = 102.0
margin_right = 320.0
margin_bottom = 149.0
size_flags_horizontal = 3

[node name="NAME" type="Label" parent="cam_spd/mouse"]
margin_right = 320.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 1 )
valign = 1

[node name="slide" type="HSlider" parent="cam_spd/mouse"]
margin_top = 31.0
margin_right = 320.0
margin_bottom = 47.0
size_flags_horizontal = 3
min_value = 0.1
max_value = 3.0
step = 0.02
value = 0.1

[node name="sep_bot" type="CenterContainer" parent="."]
margin_top = 308.0
margin_right = 320.0
margin_bottom = 369.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="back" type="Button" parent="."]
margin_top = 380.0
margin_right = 320.0
margin_bottom = 413.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.764706, 0.764706, 0.764706, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
text = "Back"
flat = true
align = 2
